# projet-non-guider

.github/workflows/: main.yml
projet-non-guider/: CMakeLists.txt  Doxyfile.in  main.cpp
projet-non-guider/.github/workflows/: ci.yml
projet-non-guider/include/: example_class.h  factorial.h  fibonacci.h  palindrome.h  prime.h
projet-non-guider/src/: CMakeLists.txt  example_class.cpp  factorial.cpp  fibonacci.cpp  palindrome.cpp  prime.cpp
projet-non-guider/tests/: CMakeLists.txt  test_example_class.cpp  test_factorial.cpp  test_fibonacci.cpp  test_palindrome.cpp  test_prime.cpp
